[project]
name = "advanced_commerce"
authors = [
    { name = "Your Company", email = "dev@example.com" }
]
description = "Multi-channel headless commerce engine for Frappe: channel/attribute catalog (Saleor-style) + saga workflow orchestration (Medusa-style)."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"

[tool.flit.module]
name = "advanced_commerce"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F", "E", "W", "I", "UP", "B", "RUF",
]
ignore = [
    "B017", "B023", "B028", "E501", "F401", "F403"
]
